# Telebot

./: Dockerfile  admin_panel_db.json  chat_ids.json  docker-compose.yml  pyproject.toml
src/: add_new_users.py  admin.py  chat_verificator.py  main.py  members_group.py  senders.py
